# python-polars-practice

./: .gitignore  README.md  pyproject.toml
src/: ch01.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py  ch11.py  ch12.py  ch13.py
