[project]
name = "python-polars-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "plotnine>=0.15.2",
    "polars>=1.36.1",
    "polars-ds>=0.10.3",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
