[project]
name = "python-polars-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "marimo>=0.19.0",
    "pandas>=2.3.3",
    "polars[all]>=1.36.1",
    "polars-ds>=0.10.3",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "maturin==1.9.3",
    "plotnine[all]==0.15.0",
    "great-tables==0.18.0",
    "textblob==0.19.0",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "chardet==5.2.0",
    "lxml==5.4.0",
    "altair==5.5.0",
    "vl-convert-python==1.8.0",
    "geoviews==1.14.1",
    "datashader==0.18.2",
    "jupyter-bokeh==4.0.5",
    "patchelf==0.17.2.4 ; sys_platform == 'linux'",
    "hvplot==0.12.0",
    "vegafusion[embed]==1.6.9",
]

[dependency-groups]
dev = ["ruff>=0.14.9"]

[tool.ruff]
lint.select = ["E", "F", "I"]
